--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
-    "declarationMap": true,
-    "moduleResolution": "node"
+    "declarationMap": true
   }
 }
