--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "@types/howler": "^2.2.7",
     "howler": "^2.2.3"
+  },
+  "dependencies":{
+    "@types/howler": "^2.2.7",
+    "howler": "^2.2.3"
   }
 }
