--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 *.tsbuildinfo
+TestLogic.*
+node_modules/.bin/acorn
+node_modules/.bin/acorn.cmd
+node_modules/yn/
+node_modules/v8-compile-cache-lib/
+node_modules/typescript/
+node_modules/ts-node/
+node_modules/.bin/
+node_modules/@cspotcode/
+node_modules/@jridgewell/
+node_modules/@tsconfig/
+node_modules/@types/
+node_modules/acorn/
+node_modules/acorn-walk/
+node_modules/make-error/
+node_modules/diff/
+node_modules/create-require/
+node_modules/arg/
