--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "type":"module",
   "devDependencies": {
     "@types/howler": "^2.2.7",
     "howler": "^2.2.3"
   },
-  "dependencies":{
+  "dependencies": {
     "@types/howler": "^2.2.7",
-    "howler": "^2.2.3"
+    "howler": "^2.2.3",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
